--- a/frontend/index.html
+++ b/frontend/index.html
@@ -218,6 +218,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js?v=test1"></script>
 </body>
 </html>
