Update: Returning from page should send you tho where you came from.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,8 +53,8 @@
         </div>
 
         <div id="view-device-details" class="d-none">
-            <button class="btn btn-outline-secondary mb-3" onclick="loadPage('devices')">
-                <i class="fa-solid fa-arrow-left"></i> Powrót do listy
+            <button class="btn btn-outline-secondary mb-3" id="btn-device-back" onclick="loadPage('devices')">
+                <i class="fa-solid fa-arrow-left"></i> Powrót
             </button>
             
             <div class="card shadow">
