Fix: Modifying showDeviceDetails, so return button works again

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="view-device-details" class="d-none">
-            <button class="btn btn-outline-secondary mb-3" id="btn-device-back" onclick="loadPage('devices')">
+            <button class="btn btn-outline-secondary mb-3" id="btn-device-back">
                 <i class="fa-solid fa-arrow-left"></i> Powrót
             </button>
             
