--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,10 +104,16 @@
                     <h5 class="mb-0">Logika i Automatyzacja</h5>
                 </div>
                 <div class="card-body">
-                    <p class="text-muted">Tu wkrótce pojawi się edytor reguł.</p>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h6 class="text-muted mb-0">Powiązane automatyzacje</h6>
+                        <button class="btn btn-sm btn-outline-primary" id="btn-add-rule-device">
+                            <i class="fa-solid fa-plus"></i> Dodaj
+                        </button>
+                    </div>
+                    <ul class="list-group" id="device-rules-list">
+                    </ul>
                 </div>
             </div>
-        </div>
 
         <div id="view-groups" class="d-none">
             <div class="d-flex justify-content-between align-items-center mb-4">
@@ -154,7 +160,14 @@
                     <h5 class="mb-0">Logika i Automatyzacja Grupy</h5>
                 </div>
                 <div class="card-body">
-                    <p class="text-muted">Tu będą reguły działające dla całej grupy (np. harmonogram).</p>
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h6 class="text-muted mb-0">Automatyzacje dla grupy</h6>
+                        <button class="btn btn-sm btn-outline-primary" id="btn-add-rule-group">
+                            <i class="fa-solid fa-plus"></i> Dodaj
+                        </button>
+                    </div>
+                    <ul class="list-group" id="group-rules-list">
+                    </ul>
                 </div>
             </div>
         </div>
