Fix: Existing rules in groups devices should no longer return to Main Page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -193,7 +193,7 @@
         </div>
 
         <div id="view-rule-details" class="d-none">
-            <button class="btn btn-outline-secondary mb-3" onclick="loadPage('rules')">
+            <button class="btn btn-outline-secondary mb-3" id="btn-rule-back">
                 <i class="fa-solid fa-arrow-left"></i> Powrót do Automatyzacji
             </button>
 
