Update: Added Info of groups device is in.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,6 +75,10 @@
                             <h5>Dane techniczne</h5>
                             <ul class="list-group list-group-flush mb-3" id="detail-attributes">
                             </ul>
+
+                            <h5 class="mt-4">Przynależność do grup</h5>
+                            <ul class="list-group list-group-flush" id="device-groups-list">
+                            </ul>
                         </div>
 
                         <div class="col-md-6">
