Fix: Exiting Group should return you to where you came from.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -139,7 +139,7 @@
         </div>
 
         <div id="view-group-details" class="d-none">
-            <button class="btn btn-outline-secondary mb-3" onclick="loadPage('groups')">
+            <button class="btn btn-outline-secondary mb-3" id="btn-group-back">
                 <i class="fa-solid fa-arrow-left"></i> Powrót do grup
             </button>
 
