Update: Added ability to change group name.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -168,6 +168,14 @@
                     
                     <div id="group-members-list" class="row g-3">
                     </div>
+                    <hr class="mt-4">
+                    <h5 class="mb-3">Konfiguracja</h5>
+                    <label class="form-label">Zmiana nazwy</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="g-detail-new-name-input">
+                        <button class="btn btn-outline-primary" onclick="renameCurrentGroup()">Zapisz</button>
+                    </div>
+
                 </div>
             </div>
 
